Add Bifrost and Shade to Depoyment Tools and SDKs
Made minor text corrections and added new rows for missing projects.

Change-Id: Ib6e396082d17150f158b0698da6dda2b66aac22e
Signed-off-by: Jimmy McArthur <jimmy@tipit.net>

--- a/sdks.yaml
+++ b/sdks.yaml
@@ -22,6 +22,18 @@ tabs:
               - Download: https://pypi.org/project/python-openstackclient/
               - Docs: https://docs.openstack.org/python-openstackclient/latest/
 
+          - name: shade
+            title: Client library for interacting with OpenStack clouds
+            desc: >
+              shade is a simple client library for interacting with OpenStack clouds. 
+              The key word here is simple. Clouds can do many many many things - 
+              but there are probably only about 10 of them that most people care about 
+              with any regularity.
+            project-team: Shade
+            links:
+              - Download: https://pypi.org/project/shade/
+              - Docs: https://docs.openstack.org/shade/latest/
+
       - category: Python SDKs
         components:
 
