Add Bifrost and Shade to Depoyment Tools and SDKs
Made minor text corrections and added new rows for missing projects.

Change-Id: Ib6e396082d17150f158b0698da6dda2b66aac22e
Signed-off-by: Jimmy McArthur <jimmy@tipit.net>

--- a/sdks.yaml
+++ b/sdks.yaml
@@ -22,6 +22,16 @@ tabs:
               - Download: https://pypi.org/project/python-openstackclient/
               - Docs: https://docs.openstack.org/python-openstackclient/latest/
 
+          - name: shade
+            title: Command-line interface for all OpenStack services
+            desc: >
+              Single command-line interface for OpenStack services with a
+              uniform command set and format.
+            project-team: Shade
+            links:
+              - Download: https://pypi.org/project/python-openstackclient/
+              - Docs: https://docs.openstack.org/python-openstackclient/latest/
+
       - category: Python SDKs
         components:
 
