Fix description for openstacksdk
OpenStackSDK had a description corresponding to openstackclient
due to a copy paste error.

Change-Id: I80ad3a35877346e5e8b0e9a64079b62f797d67ad

--- a/sdks.yaml
+++ b/sdks.yaml
@@ -38,7 +38,7 @@ tabs:
         components:
 
           - name: openstacksdk
-            title: Command-line interface for all OpenStack services
+            title: Official Python SDK for OpenStack APIs
             desc: >
               Multi-cloud aware Python SDK for the OpenStack REST API
               exposing both the full set of low-level APIs as well as
