Fix Octavia "Since" cycle
This patch corrects the "First appeared in" to be Liberty as this
was the first cycle Octavia was released in[1].

[1] https://releases.openstack.org/liberty/index.html#octavia

Change-Id: I1c94b1df2cff8ab15eaad873549b53f2a7aebdb3

--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -150,7 +150,7 @@ tabs:
               scaling feature differentiates Octavia from other load balancing
               solutions, thereby making Octavia truly suited “for the cloud.”
             project-team: octavia
-            since: Pike
+            since: Liberty
 
           - name: designate
             title: DNS service
